fix aligns and floats nesting in CSS

--- a/app/assets/stylesheets/guiding-criteria.css.scss
+++ b/app/assets/stylesheets/guiding-criteria.css.scss
@@ -4,35 +4,36 @@ table.criteria {
   width: 100%;
   border-collapse: collapse;
   border-style: hidden;
-  font-family:'naiv_normal';
+  font-family:'naiv thin';
 
   img {
     max-width: 80px;
     padding: 0.6em 0.25em;
-
-    .left {
-      float: left;
-    }
-    .right {
-      float: right;
-    }
   }
+  img.left {
+    float: left;
+  }
+  img.right {
+    float: right;
+  }
+
 
   p {
     vertical-align: center;
-
-    .left {
-    text-align: left;
-    }
-    .right {
-    text-align: right;
-    }
-    .justify {
-    text-align: justify;
-    }
+    font-size: 
   }
+  p.left {
+  text-align: left;
+  }
+  p.right {
+  text-align: right;
+  }
+  p.justify {
+  text-align: justify;
+  }
+
   td {
     /*padding: 0.5em;*/
-    border: 2px dashed white;
+    border: 3px dashed white;
   }
 }
